--- a/nextpage_front/angular.json
+++ b/nextpage_front/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "jquery"
+            ],
             "outputPath": "dist/nextpage_front",
             "index": "src/index.html",
             "main": "src/main.ts",
